<resources>
    <string name="app_name">GuessNumberAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="hello_message">Please input 4 arbitrary numbers </string>
    <string name="input_hint">Input something...</string>
    <string name="submit_message">Submit Your Answer</string>
    <string name="clear_message">Clear</string>
    <string name="answer_message">Show Answer</string>
    <string name="new_game">New Game</string>
    <string name="okay">Okay</string>
    <string name="sort_message">Sort Result</string>

</resources>
