<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity" >

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <!--xmlns:tools="http://schemas.android.com/tools"-->
        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->

    <TextView
        android:id="@+id/text_view"
        android:text="@string/hello_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view"
        android:layout_alignParentLeft="true"
        android:hint="@string/input_hint" />
    <Button
        android:id="@+id/answer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text"
        android:layout_alignParentLeft="true"
        android:text="@string/answer_message"/>
    <Button
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text"
        android:layout_toRightOf="@id/answer_button"
        android:text="@string/clear_message"/>
    <Button
        android:id="@+id/sort_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text"
        android:layout_toRightOf="@id/clear_button"
        android:text="@string/sort_message"/>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/answer_button"
        android:layout_alignParentLeft="true"
        android:text="@string/submit_message"/>
    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/submit_button"
        android:scrollbars="vertical"
        android:text=""/>
    </RelativeLayout>
</ScrollView>
